# rust-crossbuild

./: Cargo.toml  build.sh
.cargo/: config
src/: main.rs
