[package]
name = "cross"
version = "0.1.0"
authors = ["shrkamat <skamath@synamedia.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dbus = "0.9.2"


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
